Cros: fix the issue that window(s) show on incorrect user desktop.

It's caused by a code refactoring.

Bug: 781491
Change-Id: I7be6edf96e18b1e93e754ed1a4b1658999afdb29
Reviewed-on: https://chromium-review.googlesource.com/784128
Reviewed-by: Stefan Kuhne <skuhne@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518538}
Former-commit-id: c751780dd515bb4cfbda5d41f26a339a41846ee8